ion/sfu-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../kompose convert -f ion-docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: sfu
  name: sfu
spec:
  ports:
    - name: "50051"
      protocol: TCP
      port: 50051
    - name: "5000"
      port: 5000
      protocol: UDP
      targetPort: 5000
    - name: "5001"
      port: 5001
      protocol: UDP
      targetPort: 5001
    - name: "5002"
      port: 5002
      protocol: UDP
      targetPort: 5002
    - name: "5003"
      port: 5003
      protocol: UDP
      targetPort: 5003
    - name: "5004"
      port: 5004
      protocol: UDP
      targetPort: 5004
    - name: "5005"
      port: 5005
      protocol: UDP
      targetPort: 5005
    - name: "5006"
      port: 5006
      protocol: UDP
      targetPort: 5006
    - name: "5007"
      port: 5007
      protocol: UDP
      targetPort: 5007
    - name: "5008"
      port: 5008
      protocol: UDP
      targetPort: 5008
    - name: "5009"
      port: 5009
      protocol: UDP
      targetPort: 5009
    - name: "5010"
      port: 5010
      protocol: UDP
      targetPort: 5010
    - name: "5011"
      port: 5011
      protocol: UDP
      targetPort: 5011
    - name: "5012"
      port: 5012
      protocol: UDP
      targetPort: 5012
    - name: "5013"
      port: 5013
      protocol: UDP
      targetPort: 5013
    - name: "5014"
      port: 5014
      protocol: UDP
      targetPort: 5014
    - name: "5015"
      port: 5015
      protocol: UDP
      targetPort: 5015
    - name: "5016"
      port: 5016
      protocol: UDP
      targetPort: 5016
    - name: "5017"
      port: 5017
      protocol: UDP
      targetPort: 5017
    - name: "5018"
      port: 5018
      protocol: UDP
      targetPort: 5018
    - name: "5019"
      port: 5019
      protocol: UDP
      targetPort: 5019
    - name: "5020"
      port: 5020
      protocol: UDP
      targetPort: 5020
  selector:
    io.kompose.service: sfu
