ion/sfu-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sfu
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sfu
            port:
              number: 50051
